# project-context-loop-system

./: .gitignore  .mcp.json.example  README.md  claude.md  conftest.py  demo_cdn.py  opencode.json.example  pyproject.toml
.claude/agents/: confluence-chunking-analyst.md  confluence-graph-analyst.md  confluence-indexing-analyst.md  eval-script-auditor.md  eval-script-patcher.md  eval-system-analyst.md  eval-system-designer.md  eval-system-implementer.md  git-code-chunking-analyst.md  git-code-graph-analyst.md  git-code-indexing-analyst.md  gold-set-auditor.md  gold-set-build-patcher.md  graph-eval-metric-analyst.md  graph-index-diagnostic-analyst.md  graph-merge-analyst.md  graph-overview-api-builder.md  graph-overview-qa.md  graph-overview-ui-builder.md  graph-search-change-verifier.md  graph-search-improvement-designer.md  graph-search-improvement-implementer.md  graph-search-pipeline-analyst.md  indexing-change-verifier.md  indexing-improvement-designer.md  indexing-improvement-implementer.md  rag-bias-cross-analyst.md  rag-eval-change-verifier.md
.context/: ISSUES.md
.context/decisions/: DECISIONS.md
.context/progress/: STATUS.md
.context/sessions/: 2026-03-01_phase1-구현.md  2026-03-01_설계.md  2026-03-04_기획수정.md  2026-03-11_phase1구현.md  2026-03-11_phase2구현.md  2026-03-11_phase3구현.md  2026-03-11_phase4구현.md  2026-03-16_phase5_phase6구현.md  2026-03-24_confluence-mcp-검토.md  2026-03-27_버그수정-및-리팩토링.md  2026-03-30_phase7-답변품질개선.md  2026-04-01_fix-llm-json-extraction.md  2026-04-02_추가-컨텍스트-소스-검토.md  2026-04-06_scope-analyzer-개선.md  2026-04-08_phase9.5-worker-agent.md  2026-04-08_phase9.6-category-agent.md  2026-04-13_phase9.8-준비-대시보드-git-sync.md  2026-04-14_level2-3-removal.md  2026-04-14_phase9.8-pipeline-연결.md  2026-04-16_ast-code-extractor.md  2026-04-17_ast-graph-fqn-fix.md  2026-04-20_python-import-추출-누락-수정.md  2026-04-21_confluence-컨텍스트-추출-고도화.md  2026-04-22_multi-view-embedding-phase1.md  2026-04-23_confluence-mcp-3scope-sync-backend.md  2026-04-24_confluence-mcp-sync-ui.md  2026-04-24_mcp-sync-troubleshooting.md  2026-04-28_graph-context-extraction-unit-llm-body.md  2026-04-29_chat-api-성능최적화-병렬화-전용리랭커.md  2026-05-06_검색품질측정-합성골드셋.md  2026-05-12_변동성집계-평가워크플로확정.md  2026-07-10_search-context-분석-그래프검색-단순화-준비.md  2026-07-10_search-context-분석-그래프탐색-ablation.md  2026-07-10_그래프검색-단순화-구현.md  2026-07-13_mcp-auto-sync-engine.md
_workspace/: 00_requirements.md  01_analysis.md  02_design.md  03_implementation.md
config/: default.yaml
docs/: absolute_score_protocol.md  cloud-automation-harness-review.md  eval-scripts.md  eval-system-followup.md  indexing-improvement-cycle.md  llm-wiki-design.md  project-intro.html  project-intro.md  project-proposal.md  setup.md
scripts/: build_synthetic_gold_set.py  calibrate_graph_match.py  compare_runs.py  diagnose_r3_effect.py  eval_search.py  gold_human_review.py  run_category_agent.py  run_git_code_store.py  run_phase97_test.py  run_product_paths.py  run_worker_agent.py  test_product_paths.py  verify_frozen_benchmark.py
src/context_loop/: auth.py  (+3 more)
tests/: test_auth.py  test_cli.py  test_config.py
(+278 files in other folders)
