[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-sync"
version = "0.1.0"
description = "사내 업무 소스를 로컬 LLM context로 변환·저장·동기화하는 시스템"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Taeyeong", email = "imtaebari@gmail.com" },
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "apscheduler>=3.10",
    "openai>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
]
web = [
    "streamlit>=1.35",
]

[project.scripts]
context-sync = "context_sync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_sync"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
